Flycast Textures folders

--- a/packages/sx05re/emuelec/tmpfiles.d/emuelec-dirs.conf
+++ b/packages/sx05re/emuelec/tmpfiles.d/emuelec-dirs.conf
@@ -17,6 +17,9 @@ d    /storage/roms/atarist              0777 root root - -
 d    /storage/roms/atomiswave           0777 root root - -
 d    /storage/roms/bezels               0777 root root - -
 d    /storage/roms/bios                 0777 root root - -
+d    /storage/roms/bios/dc/textures     0777 root root - -
+d    /storage/roms/bios/dc/texdump      0777 root root - -
+d    /storage/roms/bios/dc/data         0777 root root - -
 d    /storage/roms/c128                 0777 root root - -
 d    /storage/roms/c16                  0777 root root - -
 d    /storage/roms/c64                  0777 root root - -
