--- a/packages/sx05re/emuelec/profile.d/99-emuelec.conf
+++ b/packages/sx05re/emuelec/profile.d/99-emuelec.conf
@@ -14,6 +14,18 @@ ES_CONF="/storage/.emulationstation/es_settings.cfg"
 EE_DEVICE=$(cat /ee_arch)
 EE_LOG="/emuelec/logs/emuelec.log"
 
+# arg1, 1 = Hides, 0 = Show.
+hide_buffer ()
+{
+  echo $1 > /sys/class/graphics/fb1/blank
+}
+
+blank_buffer()
+{
+  # Blank the buffer.
+  dd if=/dev/zero of=/dev/fb0 bs=8M > /dev/null 2>&1
+}
+
 aml_ver() {
 if grep -q "g12b" /proc/device-tree/compatible; then
  echo "Amlogic-ng"
