--- a/packages/sx05re/emuelec/profile.d/99-emuelec.conf
+++ b/packages/sx05re/emuelec/profile.d/99-emuelec.conf
@@ -28,15 +28,14 @@ hide_buffer ()
   echo $1 > /sys/class/graphics/fb1/blank
 }
 
-blank_buffer()
-{
+blank_buffer() {
   # Blank the buffer.
   echo 1 > /sys/class/graphics/fb1/blank
-  dd if=/dev/zero of=/dev/fb1 bs=8M > /dev/null 2>&1
-  echo 0 > /sys/class/graphics/fb1/blank
+  dd if=/dev/zero of=/dev/fb1 bs=1M conv=noerror,notrunc > /dev/null 2>&1
   echo 1 > /sys/class/graphics/fb0/blank
-  dd if=/dev/zero of=/dev/fb0 bs=32M > /dev/null 2>&1
+  dd if=/dev/zero of=/dev/fb0 bs=1M conv=sync,noerror,notrunc > /dev/null 2>&1
   echo 0 > /sys/class/graphics/fb0/blank
+  echo 0 > /sys/class/graphics/fb1/blank
   [[ "$EE_DEVICE" == "Amlogic-ng" ]] && fbfix
 }
 
