Added Manufacturer line per Qbert feedback

--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -244,6 +244,7 @@ This file will be replaced on any new update of EmuELEC-->
         <system>
                 <name>atarijaguar</name>
                 <fullname>Atari Jaguar</fullname>
+                <manufacturer>Atari</manufacturer>
                 <release>1993</release>
                 <hardware>console</hardware>
                 <path>/storage/roms/atarijaguar</path>
