--- a/packages/network/bluez/system.d/bluetooth.service
+++ b/packages/network/bluez/system.d/bluetooth.service
@@ -12,10 +12,11 @@ NotifyAccess=main
 EnvironmentFile=/storage/.cache/services/bluez.conf
 EnvironmentFile=-/run/libreelec/debug/bluez.conf
 ExecStart=/usr/lib/bluetooth/bluetoothd $BLUEZ_ARGS $BLUEZ_DEBUG
+ExecStartPost=/usr/bin/batocera/emuelec-bluetooth
 CapabilityBoundingSet=CAP_NET_ADMIN CAP_NET_BIND_SERVICE CAP_NET_RAW CAP_FOWNER
 LimitNPROC=1
 TimeoutStopSec=1s
-Restart=on-failure
+Restart=always
 RestartSec=2
 StartLimitInterval=0
 
