--- a/packages/sx05re/emuelec/profile.d/99-emuelec.conf
+++ b/packages/sx05re/emuelec/profile.d/99-emuelec.conf
@@ -14,6 +14,27 @@ ES_CONF="/storage/.emulationstation/es_settings.cfg"
 EE_DEVICE=$(cat /ee_arch)
 EE_LOG="/emuelec/logs/emuelec.log"
 
+get_resolution()
+{
+  local MODE=$( cat '/sys/class/display/mode' )
+  local SCANTYPE=p
+  [[ "$MODE" == *"i"* ]] && SCANTYPE=i
+  local HZ=$( echo $MODE | cut -d"$SCANTYPE" -f2 )
+  local FB_WIDTH=$( fbset | grep geometry | cut -d$' ' -f2 )
+  local FB_HEIGHT=$( fbset | grep geometry | cut -d$' ' -f3 )
+  
+  while read -r line;
+  do
+    local PS_WIDTH=$( echo $line | cut -d' ' -f1 );
+    local PS_HEIGHT=$( echo $line | cut -d' ' -f2 );
+    if [[ "$FB_WIDTH" == "$PS_WIDTH" && "$FB_HEIGHT" == "$PS_HEIGHT" ]]; then
+      local MODE_NUMS=$( echo $line | cut -d' ' -f3 );
+      echo ${MODE_NUMS}${SCANTYPE}${HZ}
+      return
+    fi
+  done < /emuelec/configs/ee_resolution_list.cfg 
+}
+
 # arg1, 1 = Hides, 0 = Show.
 hide_buffer ()
 {
